# OrgaDatos

./: CMakeLists.txt  README.md
ParaIntegrar/tokenizer/: .cproject
ParaIntegrar/tokenizer/Debug/: makefile  tokenizer
ParaIntegrar/tokenizer/Debug/src/: GrafoNew.d  HashMap.d  Jenkins.d  Vertice.d  subdir.mk  tokenizer1.d
ParaIntegrar/tokenizer/src/: Common.h  GrafoNew.cpp  GrafoNew.h  HashMap.cpp  HashMap.h  Jenkins.cpp  Jenkins.h  Vertice.cpp  Vertice.h  tokenizer1.cpp
resources/: stopWords.txt
src/: Common.h  Grafo.cpp  Grafo.h  HashPalabras.cpp  HashPalabras.h  HashRelaciones.cpp  HashRelaciones.h  HashRelacionesTriples.cpp  HashRelacionesTriples.h  Parser.cpp  Parser.h  Perceptron.cpp  Perceptron.h  ProbCondicional.cpp  ProbCondicional.h  TDatosRelacion.cpp  TDatosRelacion.h  TInfo.cpp  TInfo.h  Tokenizer.cpp  Tokenizer.h  main.cpp
